Themes! Fonts! Alignment! Oh my!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^0.14.0+4
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +45,19 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: alegreyaSans
+      fonts:
+        - asset: assets/fonts/AlegreyaSans-Regular.ttf
+        - asset: assets/fonts/AlegreyaSans-Bold.ttf
+          weight: 900
+    - family: josefinSans
+      fonts:
+        - asset: assets/fonts/JosefinSans-Regular.ttf
+    - family: roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
