--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  hooks_riverpod: ^0.14.0+4
+  riverpod: ^1.0.3
+  hooks_riverpod: ^1.0.3
   google_fonts: ^2.1.0
 
   window_size:
